--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -182,7 +182,8 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     
-
+    //firebase
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
         debugImplementation files(hermesPath + "hermes-debug.aar")
@@ -200,8 +201,4 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
-// project.ext.vectoricons = [
-//         iconFontNames: [ FontAwesome.ttf ] // Name of the font files you want to copy
-// ]
-
-// apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+apply plugin: 'com.google.gms.google-services'
