--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-firebase/app": "^6.4.0",
+    "@react-native-firebase/messaging": "^6.4.0",
     "native-base": "^2.13.12",
     "react": "16.9.0",
-    "react-native": "0.61.5",
+    "react-native": "^0.62.2",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-maps": "0.26.1",
     "react-native-maps-directions": "^1.7.6",
