--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.1",
-    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-firebase/app": "^6.4.0",
     "@react-native-firebase/messaging": "^6.4.0",
     "native-base": "^2.13.12",
     "react": "16.9.0",
     "react-native": "^0.62.2",
+    "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-maps": "0.26.1",
     "react-native-maps-directions": "^1.7.6",
@@ -31,9 +31,9 @@
     "@babel/core": "^7.6.2",
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.9.0",
+    "babel-jest": "^26.0.1",
     "eslint": "^6.5.1",
-    "jest": "^24.9.0",
+    "jest": "^26.0.1",
     "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "16.9.0"
   },
