--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native-maps-directions": "^1.7.6",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.19",
+    "react-native-star-rating": "^1.1.0",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
